--- a/daughter-styles.css
+++ b/daughter-styles.css
@@ -60,7 +60,7 @@ body {
     justify-self: center;
     grid-area: title;
     font-size: 3vw;
-    height: 5vh;
+    height: 5vw;
 }
 
 .body-gallery {display: grid; grid-template-rows: 20% 80%;
@@ -68,18 +68,19 @@ body {
         "a b"
         "main main";
     justify-items: center; align-items: center;
-    margin-left: 4%; padding: 2% 2% 2% 2%; border-radius: 2%;
+    padding: 2% 2% 2% 2%; border-radius: 2%; margin-left: 2%;
+    width: 94%; height: 25vw;
 }
 
 .body-gallery > div {
     border-radius: 3%;
-    width: 100%; height: 90%;
+    width: 30vw; height: 17vw;
     align-self: center;
     grid-area: main;
-    background-size: contain; background-repeat: no-repeat;
+    background-size: 100% 100%; background-repeat: no-repeat;
 }
 .gallery-check:nth-child(1) {background-image: url(./resources/axolotle/1.png);}
 .gallery-check:nth-child(2) {background-image: url(./resources/axolotle/2.png);}
-.gallery-check {background-size: cover; width: 50%; height: 100%; cursor: pointer;
+.gallery-check {background-size: 100% 100%; width: 10vw; height: 5.7vw; cursor: pointer;
     border-radius: 5%; border-color: black;}
 .gallery-check:hover {filter: drop-shadow(0 0 0.3rem rgba(0, 0, 0, 0.445))}
